[package]
name = "ssh-bastion-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ssh-bastion-server"
path = "src/bin/server.rs"

[[bin]]
name = "ssh-bastion-client"
path = "src/bin/client.rs"

[dependencies]
anyhow = "1.0.98"
dotenv_codegen = "0.15.0"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
