[package]
name = "ssh-bastion-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ssh-bastion-server"
path = "src/bin/server.rs"

[[bin]]
name = "ssh-bastion-client"
path = "src/bin/client.rs"

[dependencies]
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.44.2", features = ["full"] }
tokio-util = "0.7.14"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
